# idea-companion

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
docs/: 2026-06-04-pivot-and-input-rules.md  idea-companion-design.md  notion-demo-runbook.md  plan.html  qa-checklist.yaml  what-we-built.html
docs/demo/: audience-onepager.html  idea-companion-slides.html  notion-demo-runbook.md  presenter-guide.html
docs/demo/mockups/: index.html
docs/mini-app-mockups/: robot-companion.html
idea_companion/app/: app.py  page.py  test_detect_lang.py
idea_companion/smoke/: README.md  app.py  page.py  set_telegram_menu.py
notion_worker/: README.md  package-lock.json  package.json  tsconfig.json  workers.json
notion_worker/src/: index.ts
scripts/: demo_synthesis.py  smoke_clone.py  smoke_sources.py
src/personal_evolver/: __init__.py  orchestrate.py  state.py  synthesize.py  timeweek.py
src/personal_evolver/sources/: __init__.py  github.py  notion_read.py  vault.py
tests/: test_github.py  test_idempotency.py  test_synthesize.py  test_vault.py  test_week_window.py
