[project]
name = "personal-evolver"
version = "0.1.0"
description = "Cloud, phone-first weekly-review platform: synthesizes your week into Notion + a podcast you can listen to and (Phase 2) ask out loud."
requires-python = ">=3.11,<3.13"
dependencies = [
    "httpx>=0.27",
    "anthropic>=0.39",
    "modal>=0.64",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/personal_evolver"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]  # test fixtures carry long inline data literals

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
