[project]
name = "idea-companion"
version = "0.1.0"
description = "Realtime walking tutor that saves conversations, reports, and visuals into Notion."
requires-python = ">=3.11,<3.15"
dependencies = [
    "fastapi[standard]==0.115.12",
    "httpx==0.28.1",
    "modal>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
src = ["idea_companion"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "E501",  # embedded HTML/JS strings are intentionally long
    "UP017", # keep Python 3.11 compatibility
]
